# singularity-tycoon-public-demo-beta

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  overhaul.html  pyproject.toml  pytest.ini
.github/workflows/: desktop.yml  playtest.yml
audio/: BRIEF.md  BRIEF_TEMPLATE.md
desktop/: README.md  electron-main.js  package-lock.json  package.json  preload.js
desktop/scripts/: ensure-electron.sh  smoke.py
docs/: ROADMAP.md  architecture.md  audio-system.md  game-mechanics.md  how-to-play.md  known-issues.md
docs/specs/: 2026-06-12-v0.3-leverage-wear-entropy.md  2026-06-28-v0.7-compute-layer-v2.md  2026-07-02-compute-tiles-v2.md  2026-07-02-cooling-synergy-osi.md  2026-07-02-second-floor.md  2026-07-02-ubc-ubi.md  2026-07-03-fail-state.md  2026-07-03-research-tree-ux.md  2026-07-03-space-chapter.md  2026-07-03-space-realism.md  2026-07-03-topology-hex.md  2026-07-17-ai-network-acceptance.md  2026-07-17-overhaul-first-playtest.md  2026-07-18-overhaul-art-direction.md
results/robot/: log.html  output.xml  playwright-log.txt  report.html
src/: main.js  style.css
src/audio/: audio-engine.js  index.js  synth-recipes.js
src/overhaul/: audio.js  catalog.js  core.js  environment.css  main.js  style.css  view.js
tests/: conftest.py  playtest.py  requirements.txt
tests/integration/: keywords.resource  overhaul_playtest.resource  overhaul_playtest.robot  pytest_bridge.py  smoke.robot  unit_bridge.robot
tests/unit/: test_allocation_and_research.py  test_balance.py  test_boot.py  test_build_and_unlocks.py  test_compute_archetypes.py  (+24 more)
tools/: serve.py
(+2 files in other folders)
